RESOLVED FIXED 275199
[WebGPU] GPUSampler can be garbage collected surprisingly
https://bugs.webkit.org/show_bug.cgi?id=275199
Summary [WebGPU] GPUSampler can be garbage collected surprisingly
Mike Wyrzykowski
Reported 2024-06-05 22:51:05 PDT
[WebGPU] GPUSampler can be garbage collected surprisingly
Attachments
Mike Wyrzykowski
Comment 1 2024-06-05 22:51:15 PDT
Mike Wyrzykowski
Comment 2 2024-06-05 23:24:36 PDT
EWS
Comment 3 2024-06-10 11:55:21 PDT
Committed 279883@main (77ce66bfe1dd): <https://commits.webkit.org/279883@main> Reviewed commits have been landed. Closing PR #29573 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.