[WebGPU] GPUSampler can be garbage collected surprisingly https://bugs.webkit.org/show_bug.cgi?id=275199 <radar://129272687>

Reviewed by Tadeu Zagallo.

The MTLArgumentBuffer does not retain the MTLSampler here, so we need to manually
retain it by holding a RefPtr to it for the lifetime of the BindGroup.

* LayoutTests/fast/webgpu/regression/repro_275199-expected.png: Added.
* LayoutTests/fast/webgpu/regression/repro_275199-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_275199.html: Added.
* LayoutTests/fast/webgpu/regression/repro_275199b-expected.png: Added.
* LayoutTests/fast/webgpu/regression/repro_275199b-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_275199b.html: Added.
* Source/WebGPU/WebGPU/BindGroup.h:
(WebGPU::BindGroup::create):
* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::Device::createBindGroup):
(WebGPU::BindGroup::BindGroup):

Canonical link: https://commits.webkit.org/279883@main